SimpleChatTC:ShowMessage:Show any number of toolcalls
Also make reasoning easily identifiable in the chat

--- a/tools/server/public_simplechat/simplechat.css
+++ b/tools/server/public_simplechat/simplechat.css
@@ -43,6 +43,9 @@
     writing-mode: vertical-lr;
     padding-inline: 1vmin;
 }
+.chat-message-reasoning {
+    border-block-style: dashed;
+}
 .chat-message-toolcall {
     border-style: solid;
     border-color: grey;
