--- a/tools/server/public_simplechat/simplechat.css
+++ b/tools/server/public_simplechat/simplechat.css
@@ -45,6 +45,9 @@
 }
 .chat-message-reasoning {
     border-block-style: dashed;
+    overflow-wrap: break-word;
+    word-break: break-word;
+    hyphens: auto;
 }
 .chat-message-toolcall {
     border-style: solid;
@@ -57,6 +60,16 @@
     border-color: grey;
     border-width: thin;
     border-radius: 2px;
+}
+.chat-message-content {
+    overflow-wrap: break-word;
+    word-break: break-word;
+    hyphens: auto;
+}
+.chat-message-content-live {
+    overflow-wrap: break-word;
+    word-break: break-word;
+    hyphens: auto;
 }
 
 
@@ -117,8 +130,26 @@ button {
 
 @media print {
 
+
     #fullbody {
         height: auto;
     }
+
+    .chat-message {
+        border-style: solid;
+        border-color: grey;
+        border-width: thin;
+        border-radius: 2px;
+        display:inherit;
+    }
+    .chat-message-role {
+        border-style: dotted;
+        border-color: black;
+        border-width: thin;
+        border-radius: 4px;
+        writing-mode:inherit;
+        padding-inline: 1vmin;
+    }
+
 
 }
