SimpleChatTC:Cleanup Usage Note and its presentation a bit
Make it a details block and update the content a bit

--- a/tools/server/public_simplechat/simplechat.css
+++ b/tools/server/public_simplechat/simplechat.css
@@ -28,6 +28,10 @@
     background-color: lightpink;
 }
 
+#UsageNote {
+    margin: 0.0vmin;
+}
+
 .chat-message {
     border-style: solid;
     border-color: grey;
